srv/salt/base/basic/files/iptables
# Generated by iptables-save v1.4.7 on Mon Oct 31 18:36:10 2016
*filter
:INPUT DROP [28:1280]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [69:5228]
-A INPUT -s 127.0.0.1/32 -d 127.0.0.1/32 -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 7390 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 8080 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 3306 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 1521 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 873 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 6379 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 10050 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 10051 -j ACCEPT 
-A OUTPUT -o lo -j ACCEPT 
-A OUTPUT -s 127.0.0.1/32 -d 127.0.0.1/32 -j ACCEPT 
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT 
-A OUTPUT -p tcp -m tcp --dport 80 -j ACCEPT 
-A OUTPUT -p tcp -m tcp --dport 8080 -j ACCEPT 
-A OUTPUT -p tcp -m tcp --dport 443 -j ACCEPT 
-A OUTPUT -p tcp -m tcp --dport 25 -j ACCEPT 
-A OUTPUT -p tcp -m tcp --dport 6379 -j ACCEPT 
-A OUTPUT -p tcp -m tcp --dport 4505 -j ACCEPT 
-A OUTPUT -p tcp -m tcp --dport 4506 -j ACCEPT 
-A OUTPUT -p tcp -m tcp --dport 10050 -j ACCEPT 
-A OUTPUT -p tcp -m tcp --dport 10051 -j ACCEPT 
COMMIT
# Completed on Mon Oct 31 18:36:10 2016
# Generated by iptables-save v1.4.7 on Mon Oct 31 18:36:10 2016
*nat
:PREROUTING ACCEPT [168:9388]
:POSTROUTING ACCEPT [2060:124782]
:OUTPUT ACCEPT [2060:124782]
COMMIT
# Completed on Mon Oct 31 18:36:10 2016w
